--- a/empleobusca.com/data/buenos_aires/buenos_aires_p4.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p4.html
@@ -5655,72 +5655,24 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <script>
 (function () {
+  const isCT = (u) => {
+    try {
+      const url = new URL(u, location.href);
+      return /(^|\.)computrabajo\.com$/i.test(url.hostname);
+    } catch { return false; }
+  };
 
-  function getOfferIdFromEl(el) {
-    const hrefApply = el.getAttribute("data-href-offer-apply");
-    if (hrefApply) {
-      try {
-        const u = new URL(hrefApply, window.location.origin);
-        const oi = u.searchParams.get("oi");
-        if (oi) return oi;
-      } catch (e) {}
-    }
+  document.addEventListener("click", (e) => {
+    const a = e.target.closest("a[href]");
+    if (!a) return;
 
-    const oiAttr = el.getAttribute("oi");
-    if (oiAttr) return oiAttr;
+    const href = a.getAttribute("href");
+    if (!href || !isCT(href)) return;
 
-    const art = el.closest("article.box_offer[id]");
-    if (art) return art.id;
-
-    return "";
-  }
-
-  function getTitleFromOfferId(oi) {
-    if (!oi) return "";
-    const art = document.getElementById(oi);
-    if (!art) return "";
-
-    const h2 = art.querySelector("h2");
-    if (!h2) return "";
-
-    return (h2.textContent || "").replace(/\s+/g, " ").trim();
-  }
-
-  function goToForm(el) {
-    const oi = getOfferIdFromEl(el);
-    const t  = getTitleFromOfferId(oi);
-
-    const url =
-      "../postulacion.html" +
-      (oi ? ("?oi=" + encodeURIComponent(oi) + (t ? "&t=" + encodeURIComponent(t) : "")) : "");
-
-    window.location.href = url;
-  }
-
-  function bindOnlyApplyButtons() {
-    // SOLO botones reales de postulación (evita “reportar”, “guardar”, etc.)
-    const applyButtons = Array.from(document.querySelectorAll(
-      "[data-apply-link][data-href-offer-apply], [shortcut-apply-ac][data-href-offer-apply]"
-    ));
-
-    applyButtons.forEach(el => {
-      if (el.__boundApply) return;
-      el.__boundApply = true;
-
-      el.style.cursor = "pointer";
-      el.addEventListener("click", function (e) {
-        e.preventDefault();
-        e.stopPropagation();
-        goToForm(el);
-      }, true);
-    });
-  }
-
-  bindOnlyApplyButtons();
-
-  const mo = new MutationObserver(() => bindOnlyApplyButtons());
-  mo.observe(document.documentElement, { childList: true, subtree: true });
-
+    e.preventDefault();
+    e.stopPropagation();
+    alert("Esta publicación no se puede abrir desde este sitio.");
+  }, true);
 })();
 </script>
 
