Cambios de no usar mas request P2 BSAS V2

--- a/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
@@ -14,8 +14,8 @@
 <meta content="Empleos en Buenos Aires | Ofertas de trabajo Diciembre 2025 " name="title"/><meta content="¿Buscas trabajo en Buenos Aires? Crea tu CV y aplica a los empleos desde hoy de manera fácil, rápida y gratis. ¡Nuevas ofertas cada día!" name="description"/><meta content="Ofertas de empleo en Buenos Aires" name="h1"/><meta content="200" name="respsta"/>
 <meta content="Empleos en Buenos Aires | Ofertas de trabajo Diciembre 2025 " property="og:title"/><meta content="¿Buscas trabajo en Buenos Aires? Crea tu CV y aplica a los empleos desde hoy de manera fácil, rápida y gratis. ¡Nuevas ofertas cada día!" property="og:description"/>
 <link href='../miniLogo_Empleo_Busca.png' rel="shortcut icon" type="image/x-icon"/>
-<link rel="preload" as="font" href="../CSS/ct_bold_font.woff2" type="font/woff2" crossorigin>
-<link rel="preload" as="font" href="../CSS/ct_regular_font.woff2" type="font/woff2" crossorigin>
+<link as="font" crossorigin="anonymous" href="../CSS/CTFont_xs.woff2" type="font/woff2"/>
+<link as="font" crossorigin="anonymous" href="../CSS/ct_regular_font.woff2" type="font/woff2"/>
 <link rel="preload" as="font" href="../CSS/ct_bold_font.woff2" type="font/woff2" crossorigin>
 
 <script>
