--- a/empleobusca.com/data/busqueda.html
+++ b/empleobusca.com/data/busqueda.html
@@ -132,229 +132,74 @@
       padding:16px 18px;
     }
 
-    /* ===== Layout 2 columnas ===== */
-    /* Igual feeling que buenos_aires_p1: gap 15px + panel derecho más ancho */
-/* Layout igual a buenos_aires_p1 */
-.layout{
-  display:grid;
-  grid-template-columns: 740px 1fr; /* izquierda fija, derecha grande */
-  gap: 15px;
-  margin-top:16px;
-  align-items:flex-start;
-}
+    /* =========================
+       ✅ LAYOUT 2 COLUMNAS (ÚNICO)
+       ========================= */
+    .layout{
+      display:grid;
+      grid-template-columns: 58% 42%;
+      gap: 15px;
+      margin-top:16px;
+      align-items:start;
+    }
+    .col_list{ min-width:0; }
 
-
-/* panel derecho fijo (no se achica) */
-.col_detail{
-  position: sticky;
-  top: 86px;
-  min-width: 460px;
-  max-width: 460px;
-  height: calc(100vh - 110px);
-}
-
-
-
-    /* ===== Panel detalle (como páginas) ===== */
-    .detail_box{
+    /* =========================
+       ✅ PANEL DERECHO (ÚNICO)
+       ========================= */
+    .box_detail{
       background:#fff;
+      position:sticky;
+      top:86px;
+      height: calc(100vh - 110px);
+      overflow-y:auto;
+      overflow-x:hidden;
       border:1px solid #e1e5ea;
-      border-radius: 12px;
-      overflow:hidden;
+      border-radius:10px;
+      padding:0 30px 30px;
     }
-    .detail_title{
-      padding: 14px 16px;
+
+    /* Separadores como en páginas */
+    .box_border{
+      padding:10px 25px;
+      margin-bottom:15px;
+    }
+    .box_border:not([class*=bb0]):not(:last-of-type){
       border-bottom:1px solid #e1e5ea;
-      font-weight:700;
-    }
-    .detail_content{
-      padding: 14px 16px;
-      max-height: calc(100vh - 170px);
-      overflow:auto;
-      color:#313944;
-      font-size:14px;
-      line-height:1.45;
     }
 
-    .detail_header{
-      border-bottom:1px solid #e1e5ea;
-      padding-bottom:10px;
-      margin-bottom:12px;
+    /* Tipografía del panel */
+    .box_detail li,
+    .box_detail p:not([class*=fs]),
+    .box_detail span:not([class*=fs]){
+      font-size:15px;
+      line-height:1.6;
     }
-    .detail_jobtitle{
-      font-size:18px;
-      font-weight:700;
-      margin:0 0 6px;
-    }
-    .detail_meta{
-      margin:0;
-      color:#6b7785;
-      font-size:13px;
-    }
-    .detail_meta b{ color:#313944; font-weight:700; }
 
-    .detail_body p{ margin: 0 0 10px; }
-    .detail_body ul, .detail_body ol{ margin: 8px 0 12px 18px; }
-    .detail_body li{ margin: 4px 0; }
+    /* tamaños */
+    .fs22{ font-size:22px; }
+    .fs28{ font-size:28px; line-height:1; }
+    .lh15{ line-height:1.5; }
 
-    .detail_tags{
-      display:flex;
-      flex-wrap:wrap;
-      gap:8px;
-      margin-top:10px;
-    }
-    .detail_tag{
-      font-size:12px;
-      padding:6px 10px;
-      border:1px solid #e1e5ea;
+    /* Botón estilo “Postularme” */
+    .b_primary{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      background:#0D3878;
+      color:#fff;
       border-radius:999px;
-      background:#f7f9fb;
-      color:#313944;
+      font-weight:700;
+      cursor:pointer;
+      text-decoration:none;
+      border:0;
     }
+    .b_primary.big{ padding:10px 18px; }
 
     @media (max-width: 900px){
       .layout{ grid-template-columns: 1fr; }
-      .col_detail{ position: static; height:auto; }
-      .detail_content{ max-height: none; }
+      .box_detail{ position:static; height:auto; }
     }
-
-    /* faltaban tamaños que usa el detalle de las páginas */
-    .fs22{ font-size:22px; }
-    .fs28{ font-size:28px; }
-    .lh15{ line-height:1.5; }
-    /* Panel detalle más parecido a páginas */
-.detail_content .box_border{
-  border:0 !important;           /* adentro ya está el panel, no duplica borde */
-  padding:0 !important;
-  background:transparent !important;
-}
-
-.detail_content h1{
-  margin:0 0 6px;
-  font-size:28px;
-  font-weight:800;
-  color:#313944;
-}
-
-.detail_content .company_line{
-  font-weight:700;
-  margin:0 0 4px;
-}
-
-.detail_content .place_line{
-  margin:0 0 14px;
-  color:#313944;
-}
-
-.detail_content .btn_apply{
-  background:#0D3878;
-  color:#fff;
-  padding:10px 18px;
-  border-radius:25px;
-  border:none;
-  font-weight:700;
-  cursor:pointer;
-}
-
-.detail_content .desc_block{
-  margin-top:14px;
-  font-size:15px;
-  line-height:1.6;
-}
-
-.detail_content .desc_block p{
-  margin:0 0 10px;
-}
-.layout{
-  grid-template-columns: 1fr 420px; /* antes 360 */
-}
-/* === Panel derecho igual a páginas === */
-.box_detail{
-  background:#fff;
-  position:sticky;
-  top:86px;
-  height: calc(100vh - 110px);
-  overflow-y:auto;
-  overflow-x:hidden;
-  border:1px solid #e1e5ea;
-  border-radius:10px;
-  padding:0 30px 30px;
-}
-
-/* Tipografía “real” del panel */
-.box_detail li,
-.box_detail p:not([class*=fs]),
-.box_detail span:not([class*=fs]){
-  font-size:15px;
-}
-
-.box_detail li,
-.box_detail p:not([class*=lh]),
-.box_detail span:not([class*=lh]){
-  line-height:1.6;
-}
-
-/* tamaños como en páginas */
-.box_detail .fs28{ font-size:2.8rem !important; line-height:1 !important; }
-.box_detail .fs22{ font-size:2.2rem !important; }
-
-/* box_border como en páginas (separadores) */
-.box_border{
-  padding:10px 25px;
-  margin-bottom:15px;
-}
-.box_border:not([class*=bb0]):not(:last-of-type){
-  border-bottom:1px solid #e1e5ea;
-}
-
-/* Botón estilo “Computrabajo” (minimal) */
-.b_primary{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  background:#0D3878;
-  color:#fff;
-  border-radius:999px;
-  font-weight:700;
-  cursor:pointer;
-  text-decoration:none;
-  border:0;
-}
-.b_primary.big{
-  padding:10px 18px;
-}
-/* === FORZAR PROPORCIÓN como Buenos Aires (sin que nada lo pise) === */
-.layout{
-  display:grid !important;
-  grid-template-columns: 58% 42% !important;  /* ✅ derecha más grande */
-  gap: 15px !important;
-  align-items:start !important;
-}
-
-/* la columna izquierda NO se estira raro */
-.col_list{
-  min-width: 0 !important;
-}
-
-/* el panel derecho ocupa el 42% real (no fijo) */
-.col_detail{
-  width: auto !important;
-  min-width: 0 !important;
-  max-width: none !important;
-  position: sticky;
-  top: 86px;
-  height: calc(100vh - 110px);
-}
-
-/* asegura que el contenedor interno del panel use todo el ancho */
-.col_detail .detail_box,
-.col_detail .box_detail{
-  width: 100% !important;
-}
-.container{
-  max-width: 1240px !important;
-}
-
   </style>
 </head>
 
@@ -362,16 +207,17 @@
 
   <div class="topbar">
     <div class="container">
-    <a class="logo" title="Empleo Busca" href="../home.html">
-    <img
-      src="../logo_Empleo_Busca.png"
-      alt="Empleo Busca Argentina"
-      class="logo_img"
-    />
-  </a>
+      <a class="logo" title="Empleo Busca" href="../home.html">
+        <img
+          src="../logo_Empleo_Busca.png"
+          alt="Empleo Busca Argentina"
+          class="logo_img"
+        />
+      </a>
 
       <div style="display:flex; gap:10px; align-items:center;">
-        <a class="btn" href="./home.html">← Volver al inicio</a>
+        <!-- ✅ corregido: estabas usando ./home.html -->
+        <a class="btn" href="../home.html">← Volver al inicio</a>
       </div>
     </div>
   </div>
@@ -385,15 +231,14 @@
     <div class="layout">
       <div id="resultados" class="col_list"></div>
 
-      <!-- Panel derecho: con data-* como en páginas -->
-     <aside class="box_detail" data-offers-grid-box-detail>
-    <div class="hide" data-offers-grid-detail-container></div>
+      <!-- Panel derecho -->
+      <aside class="box_detail" data-offers-grid-box-detail>
+        <div class="hide" data-offers-grid-detail-container></div>
 
-    <div class="box_border" id="detalle_contenido">
-      Seleccioná una oferta para ver la descripción.
-    </div>
-  </aside>
-
+        <div class="box_border" id="detalle_contenido">
+          Seleccioná una oferta para ver la descripción.
+        </div>
+      </aside>
     </div>
   </div>
 
