Cambios en busqueda V2

--- a/empleobusca.com/data/busqueda.html
+++ b/empleobusca.com/data/busqueda.html
@@ -207,9 +207,9 @@
 
   <div class="topbar">
     <div class="container">
-      <a class="logo" title="Empleo Busca" href="../home.html">
+      <a class="logo" title="Empleo Busca" href="../data/home.html">
         <img
-          src="../logo_Empleo_Busca.png"
+          src="../data/logo_Empleo_Busca.png"
           alt="Empleo Busca Argentina"
           class="logo_img"
         />
