Cambios en busqueda V3

--- a/empleobusca.com/data/busqueda.html
+++ b/empleobusca.com/data/busqueda.html
@@ -217,7 +217,7 @@
 
       <div style="display:flex; gap:10px; align-items:center;">
         <!-- ✅ corregido: estabas usando ./home.html -->
-        <a class="btn" href="../home.html">← Volver al inicio</a>
+        <a class="btn" href="../data/home.html">← Volver al inicio</a>
       </div>
     </div>
   </div>
